--- a/Backend/Api/Api.csproj
+++ b/Backend/Api/Api.csproj
@@ -9,4 +9,8 @@
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0"/>
     </ItemGroup>
 
+    <ItemGroup>
+        <ProjectReference Include="..\DataManagement.Infrastructure\DataManagement.Infrastructure.csproj"/>
+    </ItemGroup>
+
 </Project>
