--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "Gabin Dongmo <gdongmo@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "start": "concurrently \"cd Backend/Api && dotnet run \" \"cd frontend && yarn dev\"",
+    "start": "concurrently \"cd Backend/Api && dotnet run -lp https\" \"cd frontend && yarn dev\"",
     "start:watch": "concurrently \"cd Backend/Api && dotnet watch run \" \"cd frontend && yarn dev\""
   },
   "devDependencies": {
