--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,10 +17,12 @@
     "react-bootstrap-icons": "^1.11.4",
     "react-dom": "^18.3.1",
     "react-input-mask": "^2.0.4",
+    "react-query": "^3.39.3",
     "react-router-dom": "^6.25.1",
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@openapitools/openapi-generator-cli": "^2.13.4",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@typescript-eslint/eslint-plugin": "^7.15.0",
