--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,13 +11,16 @@
     "clean": "rimraf node_modules"
   },
   "dependencies": {
+    "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
     "react-bootstrap-icons": "^1.11.4",
     "react-dom": "^18.3.1",
     "react-input-mask": "^2.0.4",
+    "react-query": "^3.39.3",
     "react-router-dom": "^6.25.1",
+    "react-toastify": "^10.0.5",
     "zod": "^3.23.8"
   },
   "devDependencies": {
